CC-5392 Delete mothership related code (#1217)
* Remove rollout for POST / PUT playlists

* Delete DispatchToMothershipHandler

* Delete MothershipIntegrationSpec

* Delete public api client

* Delete unused fixtures

* Delete entry in manifest

* Update docs

* Optimize imports
